Fix notes in HTML pages that have misplaced colons

--- a/files/en-us/web/html/element/canvas/index.html
+++ b/files/en-us/web/html/element/canvas/index.html
@@ -119,7 +119,7 @@ browser-compat: html.elements.canvas
 </table>
 
 <div class="notecard note">
-<p><strong>Note</strong>: Exceeding the maximum dimensions or area renders the canvas unusable — drawing commands will not work.</p>
+<p><strong>Note:</strong> Exceeding the maximum dimensions or area renders the canvas unusable — drawing commands will not work.</p>
 </div>
 
 <h2 id="Examples">Examples</h2>
