--- a/files/en-us/web/html/element/slot/index.html
+++ b/files/en-us/web/html/element/slot/index.html
@@ -93,7 +93,7 @@ browser-compat: html.elements.slot
 &lt;/template&gt;</pre>
 
 <div class="note">
-<p><strong>Note</strong>: You can see this complete example in action at <a class="external external-icon" href="https://github.com/mdn/web-components-examples/tree/master/element-details" rel="noopener">element-details</a> (see it <a class="external external-icon" href="https://mdn.github.io/web-components-examples/element-details/" rel="noopener">running live</a>). In addition, you can find an explanation at <a href="/en-US/docs/Web/Web_Components/Using_templates_and_slots">Using templates and slots</a>.</p>
+<p><strong>Note:</strong> You can see this complete example in action at <a class="external external-icon" href="https://github.com/mdn/web-components-examples/tree/master/element-details" rel="noopener">element-details</a> (see it <a class="external external-icon" href="https://mdn.github.io/web-components-examples/element-details/" rel="noopener">running live</a>). In addition, you can find an explanation at <a href="/en-US/docs/Web/Web_Components/Using_templates_and_slots">Using templates and slots</a>.</p>
 </div>
 
 <h2 id="Specifications">Specifications</h2>
