--- a/files/en-us/web/html/link_types/preload/index.html
+++ b/files/en-us/web/html/link_types/preload/index.html
@@ -85,11 +85,11 @@ before browsers' main rendering machinery kicks in. This ensures they are availa
 </ul>
 
 <div class="note">
-<p><strong>Note</strong>: <code>video</code> preloading is included in the Preload spec, but is not currently implemented by browsers.</p>
+<p><strong>Note:</strong> <code>video</code> preloading is included in the Preload spec, but is not currently implemented by browsers.</p>
 </div>
 
 <div class="note">
-<p><strong>Note</strong>: There's more detail about these values and the web features they expect to be consumed by in the Preload spec — see <a href="https://w3c.github.io/preload/#link-element-extensions">link element extensions</a>. Also note that the full list of values the <code>as</code> attribute can take is governed by the Fetch spec — see <a href="https://fetch.spec.whatwg.org/#concept-request-destination">request destinations</a>.</p>
+<p><strong>Note:</strong> There's more detail about these values and the web features they expect to be consumed by in the Preload spec — see <a href="https://w3c.github.io/preload/#link-element-extensions">link element extensions</a>. Also note that the full list of values the <code>as</code> attribute can take is governed by the Fetch spec — see <a href="https://fetch.spec.whatwg.org/#concept-request-destination">request destinations</a>.</p>
 </div>
 
 <h2 id="Including_a_MIME_type">Including a MIME type</h2>
