--- a/files/en-us/web/html/element/br/index.html
+++ b/files/en-us/web/html/element/br/index.html
@@ -18,7 +18,7 @@ browser-compat: html.elements.br
 <p>As you can see from the above example, a <code>&lt;br&gt;</code> element is included at each point where we want the text to break. The text after the <code>&lt;br&gt;</code> begins again at the start of the next line of the text block.</p>
 
 <div class="note">
-<p><strong>Note</strong>: Do not use <code>&lt;br&gt;</code> to create margins between paragraphs; wrap them in {{htmlelement("p")}} elements and use the <a href="/en-US/docs/Web/CSS">CSS</a> {{cssxref('margin')}} property to control their size.</p>
+<p><strong>Note:</strong> Do not use <code>&lt;br&gt;</code> to create margins between paragraphs; wrap them in {{htmlelement("p")}} elements and use the <a href="/en-US/docs/Web/CSS">CSS</a> {{cssxref('margin')}} property to control their size.</p>
 </div>
 
 <h2 id="Attributes">Attributes</h2>
